--- a/.github/workflows/schedule-transformers-compat.yml
+++ b/.github/workflows/schedule-transformers-compat.yml
@@ -432,9 +432,8 @@ jobs:
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       shell: bash
       run: |
-        claude -p \
-          --allowedTools "Edit,Read,Glob,Grep,Write,Bash(git diff:*),Bash(git status)" \
-          "$(cat claude_prompt.txt)"
+        cat claude_prompt.txt | claude -p \
+          --allowedTools "Edit,Read,Glob,Grep,Write,Bash(git diff:*),Bash(git status)"
 
     - name: Revert any changes to third_party submodules
       shell: bash
