--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2292,6 +2292,7 @@ test_config:
     status: EXPECTED_PASSING
 
   detr/object_detection/pytorch-resnet_50-single_device-inference:
+    required_pcc: 0.98
     status: EXPECTED_PASSING
 
   sentencizer/pytorch-xlm-roberta-base-single_device-inference:
@@ -2599,6 +2600,7 @@ test_config:
     status: EXPECTED_PASSING
 
   allam/causal_lm/pytorch-allam_7b_instruct-single_device-inference:
+    required_pcc: 0.988
     status: EXPECTED_PASSING
     arch_overrides:
       n150:
