And another time

--- a/.github/workflows/schedule-transformers-compat.yml
+++ b/.github/workflows/schedule-transformers-compat.yml
@@ -412,12 +412,10 @@ jobs:
 
         ## Instructions
         1. Analyze the failures to identify which transformers API changes caused them.
-        2. Add backward-compatible shims to tests/infra/utilities/transformers_compat.py using
-           hasattr guards (following the existing pattern in that file).
+        2. You changes do not need to be backward-compatible with older transformers versions. The whole repo is going to be updated to the latest transformers version.
         3. You may modify any Python files in the repo as needed to fix the compatibility issues
            (e.g. update imports, fix class references, add conftest imports, etc.).
-        4. If adding new shims, ensure tests/conftest.py or tests/runner/conftest.py imports
-           the transformers_compat module if it is not already imported there.
+        4. Try to address any API changes at the source level, if possible. If an old API is no longer supported, search for alternatives to use instead. 
 
         ## Rules
         - Do NOT modify files under third_party/ (these are external submodules).
@@ -486,7 +484,7 @@ jobs:
   # ── Job 6: Re-run tests with the fix applied ──────────────────────────
   rerun-tests:
     needs: [build-image, build-ttxla, generate-matrix, analyze-and-fix]
-    if: ${{ needs.analyze-and-fix.outputs.has-fix == 'true' }}
+    if: ${{ always() && needs.analyze-and-fix.outputs.has-fix == 'true' }}
     strategy:
       fail-fast: false
       matrix:
@@ -698,7 +696,7 @@ jobs:
   # ── Job 7: Create PR if re-run passed ──────────────────────────────────
   create-pr:
     needs: [analyze-and-fix, rerun-tests]
-    if: ${{ needs.analyze-and-fix.outputs.has-fix == 'true' && needs.rerun-tests.result == 'success' }}
+    if: ${{ always() && needs.analyze-and-fix.outputs.has-fix == 'true' && needs.rerun-tests.result == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
