add logging to demo tests as well

--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -48,3 +48,4 @@ jobs:
       docker-image: ${{ inputs.release_docker_image }}
       ref: main
       project-filter: tt-xla
+      fail-notify: true
