--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -3,8 +3,8 @@ name: Run Test Single
 on:
   workflow_dispatch:
     inputs:
-      release_docker_image:
-        description: 'Name of the release Docker image'
+      version_tag:
+        description: 'version_tag'
         type: string
         required: true
 
@@ -16,44 +16,19 @@ permissions:
   checks: write
 
 jobs:
-  basic-tests:
-    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@vvukoman/add-fail-notify-perf-flag
+  release:
+    uses: ./.github/workflows/call-release.yml
     secrets: inherit
     with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project-filter: tt-xla
-      fail-notify: true
+      artifact_release_run_id: ""
+      wheel_release_artifact_name: ""
+      wheel_release_vllm_tt_artifact_name: ""
+      is_nightly_release: true
 
-  perf-benchmark-n150:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/add-fail-notify-perf-flag
+  release-forge:
+    uses: ./.github/workflows/call-forge-release.yml
+    needs: [ release ]
+    if: ${{ needs.release.outputs.release_ready == 'true' }}
     secrets: inherit
     with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project: tt-xla
-      sh-runner: false
-      skip-device-perf: false
-      runs-on-filter: n150
-      fail-notify: true
-
-  perf-benchmark-llmbox:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/add-fail-notify-perf-flag
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project: tt-xla
-      sh-runner: false
-      skip-device-perf: false
-      runs-on-filter: llmbox
-      fail-notify: true
-
-  demo-test:
-    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@vvukoman/add-fail-notify-perf-flag
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project-filter: tt-xla
-      fail-notify: true
+      release_tag: "test"
