--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -28,7 +28,7 @@ jobs:
   release-forge:
     uses: ./.github/workflows/call-forge-release.yml
     needs: [ release ]
-    if: ${{ needs.release.outputs.release_ready == 'true' }}
+    if: ${{ always() && needs.release.outputs.release_ready == 'true' }}
     secrets: inherit
     with:
       release_tag: "test"
