--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -10,13 +10,43 @@ on:
 
 jobs:
   basic-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Exit 1
-        run: exit 1
+    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@main
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project-filter: tt-xla
+      fail-notify: true
 
   perf-benchmark-n150:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Exit 0
-        run: exit 0
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project: tt-xla
+      sh-runner: false
+      skip-device-perf: false
+      runs-on-filter: n150
+      fail-notify: true
+
+  perf-benchmark-llmbox:
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project: tt-xla
+      sh-runner: false
+      skip-device-perf: false
+      runs-on-filter: llmbox
+      fail-notify: true
+
+  demo-test:
+    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      ref: main
+      project-filter: tt-xla
+      fail-notify: true
