--- a/.github/workflows/call-release.yml
+++ b/.github/workflows/call-release.yml
@@ -36,32 +36,23 @@ permissions:
 
 jobs:
   publish-release-wheel:
-    # uses: ./.github/workflows/call-publish-release-wheel.yml
-    # secrets: inherit
-    # with:
-    #   wheel_release_artifact_run_id: ${{ inputs.artifact_release_run_id }}
-    #   wheel_release_artifact_name: ${{ inputs.wheel_release_artifact_name }}
-    #   wheel_release_vllm_tt_artifact_name: ${{ inputs.wheel_release_vllm_tt_artifact_name }}
-    #   is_nightly_release: ${{ inputs.is_nightly_release }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Exit 0
-        run: exit 0
-
+    uses: ./.github/workflows/call-publish-release-wheel.yml
+    secrets: inherit
+    with:
+      wheel_release_artifact_run_id: ${{ inputs.artifact_release_run_id }}
+      wheel_release_artifact_name: ${{ inputs.wheel_release_artifact_name }}
+      wheel_release_vllm_tt_artifact_name: ${{ inputs.wheel_release_vllm_tt_artifact_name }}
+      is_nightly_release: ${{ inputs.is_nightly_release }}
 
   build-release-docker:
-    # uses: ./.github/workflows/call-build-release-docker.yml
+    uses: ./.github/workflows/call-build-release-docker.yml
     needs: [ publish-release-wheel ]
-    # secrets: inherit
-    # with:
-    #   wheel_release_artifact_run_id: ${{ inputs.artifact_release_run_id }}
-    #   wheel_release_artifact_name: ${{ inputs.wheel_release_artifact_name }}
-    #   wheel_release_vllm_tt_artifact_name: ${{ inputs.wheel_release_vllm_tt_artifact_name }}
-    #   wheel_version_override: ${{ needs.publish-release-wheel.outputs.release_tag }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Exit 0
-        run: exit 0
+    secrets: inherit
+    with:
+      wheel_release_artifact_run_id: ${{ inputs.artifact_release_run_id }}
+      wheel_release_artifact_name: ${{ inputs.wheel_release_artifact_name }}
+      wheel_release_vllm_tt_artifact_name: ${{ inputs.wheel_release_vllm_tt_artifact_name }}
+      wheel_version_override: ${{ needs.publish-release-wheel.outputs.release_tag }}
 
   release-tests:
     uses: ./.github/workflows/call-release-tests.yml
@@ -69,26 +60,17 @@ jobs:
     secrets: inherit
     with:
       release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
-    # runs-on: ubuntu-latest
-    # steps:
-    #   - name: Exit 1
-    #     run: exit 1
 
   publish-release:
-    # uses: ./.github/workflows/call-publish-release.yml
-    if: ${{ always() && needs.publish-release-wheel.result == 'success' && needs.build-release-docker.result == 'success' && (needs.release-tests.result == 'success' || needs.release-tests.result == 'failure') }}
+    uses: ./.github/workflows/call-publish-release.yml
+    if: ${{ always() && needs.publish-release-wheel.result == 'success' && needs.build-release-docker.result == 'success' }}
     needs: [ publish-release-wheel, build-release-docker, release-tests ]
-    # secrets: inherit
-    # with:
-    #   release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
-    #   docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Exit 0
-        run: exit 0
+    secrets: inherit
+    with:
+      release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
+      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
 
   summary:
-    if: always()
     needs: [ publish-release-wheel, build-release-docker, publish-release ]
     runs-on: ubuntu-latest
     outputs:
