--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -2,110 +2,146 @@ name: Run Test Single
 
 on:
   workflow_dispatch:
-    inputs:
-      dir:
-        description: 'Path passed to pytest'
-        required: true
-        type: string
-      mark:
-        description: 'Mark passed to pytest (-m)'
-        required: false
-        type: string
-      contains:
-        description: 'Execute test that contains the specified string (-k)'
-        required: false
-        type: string
-      args:
-        description: 'Additional arguments passed to pytest'
-        required: false
-        type: string
-      runs_on:
-        description: 'Choose runners for running test'
-        required: true
-        type: choice
-        options:
-          - 'n150'
-          - 'n300'
-          - 'p150'
-          - 'n300-llmbox'
-          - 'llmbox-1'
-          - 'llmbox-2'
-      shared_runners:
-        description: 'Run test on the CIv2 runner'
-        required: false
-        default: false
-        type: boolean
-      parallel_groups:
-        description: 'Number of parallel runners for test execution'
-        required: true
-        default: '1'
-        type: choice
-        options:
-          - '1'
-          - '2'
-          - '3'
-          - '4'
-          - '5'
-          - '8'
-          - '10'
-      mlir_override:
-          description: 'Git SHA of commit in tenstorrent/tt-mlir'
-          required: false
-          type: string
 
 permissions:
+  contents: write
+  actions: write
+  id-token: write
   packages: write
   checks: write
-
-run-name: 'Test ( Dir: ${{ inputs.dir }} - Mark: ${{ inputs.mark }} - Run-on: ${{ inputs.runs_on }} - Shared runner: ${{ inputs.shared_runners }} )'
 
 jobs:
   build-image:
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
-    with:
-      mlir_override: ${{ inputs.mlir_override }}
 
   build-ttxla:
-    needs: build-image
     uses: ./.github/workflows/call-build.yml
+    name: "Build tt-xla"
     secrets: inherit
+    needs: build-image
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
-      mlir_override: ${{ inputs.mlir_override }}
 
-  generate-test-config:
-    needs: build-ttxla
-    runs-on: ubuntu-latest
-    outputs:
-      test-config: ${{ steps.generate.outputs.test-config }}
-    steps:
-      - id: generate
-        run: |
-          TEST_CONFIG=$(jq -n \
-            --arg runs_on '${{ inputs.runs_on }}' \
-            --arg dir '${{ inputs.dir }}' \
-            --arg mark '${{ inputs.mark }}' \
-            --arg shared_runners '${{ inputs.shared_runners }}' \
-            --arg args '${{ inputs.args }}' \
-            --arg contains '${{ inputs.contains }}' \
-            --argjson parallel_groups '${{ inputs.parallel_groups }}' \
-            '[{"runs-on": $runs_on,"name": "Test","dir": $dir,"test-mark": $mark,"shared-runners": $shared_runners,"args": $args,"contains": $contains,"parallel-groups": $parallel_groups}]')
-
-          echo $TEST_CONFIG
-
-          echo "test-config=$(echo "$TEST_CONFIG" | jq -c)" >> $GITHUB_OUTPUT
-
-  test:
-    if: always() && !cancelled() && inputs.preset != 'tt_forge_models'
+  nightly_tests:
     uses: ./.github/workflows/call-test.yml
-    needs: [ build-image, build-ttxla, generate-test-config ]
     secrets: inherit
+    needs: [ build-image, build-ttxla ]
     with:
-      test_suite: 'Custom'
-      test_suite_custom: ${{ needs.generate-test-config.outputs.test-config }}
+      test_suite: basic-test-nightly.json
       docker_image: ${{ needs.build-image.outputs.docker-image-base }}
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
       alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
+
+  test_full_model:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # This ensures the job runs regardless of success or failure of `nightly_tests`:
+    if: success() || failure()
+    with:
+      test_suite: model-test-full.json
+      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  # This is a single test job that runs all passing tt-forge-models tests.
+  test_forge_models_passing:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # This ensures the job runs regardless of success or failure of `nightly_tests`:
+    if: success() || failure()
+    with:
+      test_suite: model-test-passing.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  # This is a single test job that runs all xfailing, skipped or placeholder tt-forge-models tests.
+  test_forge_models_xfail:
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ build-image, build-ttxla ]
+    # This ensures the job runs regardless of success or failure of `nightly_tests`:
+    if: success() || failure()
+    with:
+      test_suite: model-test-xfail.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  release:
+    uses: ./.github/workflows/call-release.yml
+    needs: [ build-ttxla ]
+    secrets: inherit
+    with:
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+      is_nightly_release: true
+
+  release-forge:
+    uses: ./.github/workflows/call-forge-release.yml
+    needs: [ release ]
+    if: ${{ always() && needs.release.outputs.release_ready == 'true' }}
+    secrets: inherit
+    with:
+      release_tag: ${{ needs.release.outputs.release_tag }}
+
+  fail-notify:
+    if: always()
+    needs:
+      - nightly_tests
+      - test_full_model
+      - test_forge_models_passing
+      - test_forge_models_xfail
+      - build-image
+      - build-ttxla
+    runs-on: Ubuntu-latest
+    outputs:
+      is-main: ${{ steps.branch-check.outputs.IS_MAIN }}
+      failed: ${{ steps.check.outputs.failure }}
+    steps:
+      - name: Check if branch is main
+        id: branch-check
+        run: echo "IS_MAIN=$(if [ '${{ github.ref }}' == 'refs/heads/main' ]; then echo true; else echo false; fi)" >> $GITHUB_OUTPUT
+      - name: Check if the needed jobs succeeded or failed
+        id: check
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
+
+  fail-send-msg:
+    if: always()
+    needs:
+      - fail-notify
+    runs-on: Ubuntu-latest
+    steps:
+      - name: Send Fail Notification
+        if: ${{ needs.fail-notify.outputs.failed == 'true' && needs.fail-notify.outputs.is-main == 'true' }}
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          payload: |
+            {
+              "text": "Bad bad nightly: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}>",
+              "channel": "C08GYB57C8M",
+              "unfurl_links": false, "unfurl_media": false
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NIGHTLY_FAIL }}
+
+      - name: Send Success Notification
+        if: ${{ needs.fail-notify.outputs.failed == 'false' && needs.fail-notify.outputs.is-main == 'true' }}
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          payload: |
+            {
+              "text": "Good nightly: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}>",
+              "channel": "C08GYB57C8M",
+              "unfurl_links": false, "unfurl_media": false
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NIGHTLY_SUCCESS }}
