--- a/.github/workflows/call-publish-release-wheel.yml
+++ b/.github/workflows/call-publish-release-wheel.yml
@@ -24,6 +24,10 @@ on:
         type: boolean
         required: false
         default: false
+      tag:
+        description: 'tag'
+        type: string
+        required: true
     outputs:
       release_tag:
         description: 'Release tag'
@@ -51,6 +55,7 @@ jobs:
             tag="$VERSION.$nightly_release_suffix"
           fi
 
+          tag="${{ inputs.tag }}"
           echo "tag=$tag" >> $GITHUB_OUTPUT
 
       - name: Set up Python
@@ -58,11 +63,11 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.PYPI_BUCKET_ACCESS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: ${{ secrets.PYPI_BUCKET_ACCESS_ROLE }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Download wheels
         shell: bash
@@ -102,9 +107,9 @@ jobs:
 
           echo "Uploading wheels to the pypi bucket"
           for wheel_file in wheel/*.whl; do
-            if [ "${{ inputs.should_overwrite_release }}" == "true" ]; then
-              s3pypi upload "$wheel_file" --put-root-index --force --bucket ${{ secrets.PYPI_BUCKET }}
-            else
-              s3pypi upload "$wheel_file" --put-root-index --bucket ${{ secrets.PYPI_BUCKET }}
-            fi
+            # if [ "${{ inputs.should_overwrite_release }}" == "true" ]; then
+            #   s3pypi upload "$wheel_file" --put-root-index --force --bucket ${{ secrets.PYPI_BUCKET }}
+            # else
+            #   s3pypi upload "$wheel_file" --put-root-index --bucket ${{ secrets.PYPI_BUCKET }}
+            # fi
           done
