--- a/.github/workflows/call-forge-release.yml
+++ b/.github/workflows/call-forge-release.yml
@@ -45,11 +45,11 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.PYPI_BUCKET_ACCESS_ROLE }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: ${{ secrets.PYPI_BUCKET_ACCESS_ROLE }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Build wheel from template
         shell: bash
@@ -64,11 +64,11 @@ jobs:
           pip install s3pypi
 
           echo "Uploading wheel to the pypi bucket"
-          if [ "${{ inputs.should_overwrite_release }}" == "true" ]; then
-            s3pypi upload tt_forge*.whl --put-root-index --force --bucket ${{ secrets.PYPI_BUCKET }}
-          else
-            s3pypi upload tt_forge*.whl --put-root-index --bucket ${{ secrets.PYPI_BUCKET }}
-          fi
+          # if [ "${{ inputs.should_overwrite_release }}" == "true" ]; then
+          #   s3pypi upload tt_forge*.whl --put-root-index --force --bucket ${{ secrets.PYPI_BUCKET }}
+          # else
+          #   s3pypi upload tt_forge*.whl --put-root-index --bucket ${{ secrets.PYPI_BUCKET }}
+          # fi
 
       - name: Build & push Docker image
         shell: bash
