--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -9,44 +9,49 @@ on:
         required: true
 
 jobs:
-  basic-tests:
-    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@vvukoman/add-fail-notify-perf-flag
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project-filter: tt-xla
-      fail-notify: true
+  log:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log
+        run: echo "log"
+  # basic-tests:
+  #   uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@vvukoman/add-fail-notify-perf-flag
+  #   secrets: inherit
+  #   with:
+  #     docker-image: ${{ inputs.release_docker_image }}
+  #     ref: vvukoman/add-fail-notify-perf-flag
+  #     project-filter: tt-xla
+  #     fail-notify: true
 
-  perf-benchmark-n150:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/add-fail-notify-perf-flag
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project: tt-xla
-      sh-runner: false
-      skip-device-perf: false
-      runs-on-filter: n150
-      fail-notify: true
+  # perf-benchmark-n150:
+  #   uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/add-fail-notify-perf-flag
+  #   secrets: inherit
+  #   with:
+  #     docker-image: ${{ inputs.release_docker_image }}
+  #     ref: vvukoman/add-fail-notify-perf-flag
+  #     project: tt-xla
+  #     sh-runner: false
+  #     skip-device-perf: false
+  #     runs-on-filter: n150
+  #     fail-notify: true
 
-  perf-benchmark-llmbox:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/add-fail-notify-perf-flag
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project: tt-xla
-      sh-runner: false
-      skip-device-perf: false
-      runs-on-filter: llmbox
-      fail-notify: true
+  # perf-benchmark-llmbox:
+  #   uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/add-fail-notify-perf-flag
+  #   secrets: inherit
+  #   with:
+  #     docker-image: ${{ inputs.release_docker_image }}
+  #     ref: vvukoman/add-fail-notify-perf-flag
+  #     project: tt-xla
+  #     sh-runner: false
+  #     skip-device-perf: false
+  #     runs-on-filter: llmbox
+  #     fail-notify: true
 
-  demo-test:
-    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@vvukoman/add-fail-notify-perf-flag
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: vvukoman/add-fail-notify-perf-flag
-      project-filter: tt-xla
-      fail-notify: true
+  # demo-test:
+  #   uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@vvukoman/add-fail-notify-perf-flag
+  #   secrets: inherit
+  #   with:
+  #     docker-image: ${{ inputs.release_docker_image }}
+  #     ref: vvukoman/add-fail-notify-perf-flag
+  #     project-filter: tt-xla
+  #     fail-notify: true
