--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -13,6 +13,13 @@ on:
         type: string
 
 jobs:
+  log:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log
+        run: |
+          echo "logging caller: ${{ inputs.caller_workflow }}"
+
   basic-tests:
     uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@main
     secrets: inherit
