--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -21,42 +21,58 @@ jobs:
           echo "logging caller: ${{ inputs.caller_workflow }}"
 
   basic-tests:
-    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@main
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: main
-      project-filter: tt-xla
+    # uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@main
+    # secrets: inherit
+    # with:
+    #   docker-image: ${{ inputs.release_docker_image }}
+    #   ref: main
+    #   project-filter: tt-xla
+    runs-on: ubuntu-latest
+    steps:
+      - name: Exit 0
+        run: exit 0
 
   perf-benchmark-n150:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: main
-      project: tt-xla
-      sh-runner: false
-      skip-device-perf: false
-      runs-on-filter: n150
+    # uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    # secrets: inherit
+    # with:
+    #   docker-image: ${{ inputs.release_docker_image }}
+    #   ref: main
+    #   project: tt-xla
+    #   sh-runner: false
+    #   skip-device-perf: false
+    #   runs-on-filter: n150
+    runs-on: ubuntu-latest
+    steps:
+      - name: Exit 0
+        run: exit 0
 
   perf-benchmark-llmbox:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: main
-      project: tt-xla
-      sh-runner: false
-      skip-device-perf: false
-      runs-on-filter: llmbox
+    # uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    # secrets: inherit
+    # with:
+    #   docker-image: ${{ inputs.release_docker_image }}
+    #   ref: main
+    #   project: tt-xla
+    #   sh-runner: false
+    #   skip-device-perf: false
+    #   runs-on-filter: llmbox
+    runs-on: ubuntu-latest
+    steps:
+      - name: Exit 1
+        run: exit 1
 
   demo-tests:
-    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
-    secrets: inherit
-    with:
-      docker-image: ${{ inputs.release_docker_image }}
-      ref: main
-      project-filter: tt-xla
+    # uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
+    # secrets: inherit
+    # with:
+    #   docker-image: ${{ inputs.release_docker_image }}
+    #   ref: main
+    #   project-filter: tt-xla
+    runs-on: ubuntu-latest
+    steps:
+      - name: Exit 0
+        run: exit 0
 
   fail-notify:
     if: always()
@@ -93,6 +109,12 @@ jobs:
       - fail-notify
     runs-on: Ubuntu-latest
     steps:
+      - name: Log
+        run: |
+          echo "values of inputs are"
+          echo "needs.fail-notify.outputs.failed: ${{needs.fail-notify.outputs.failed}}"
+          echo "needs.fail-notify.outputs.is-main: ${{needs.fail-notify.outputs.is-main}}"
+          echo "needs.fail-notify.outputs.is-release-process: ${{needs.fail-notify.outputs.is-release-process}}"
       - name: Send Fail Notification
         if: ${{ needs.fail-notify.outputs.failed == 'true' && needs.fail-notify.outputs.is-main == 'true' && needs.fail-notify.outputs.is-release-process == 'true'}}
         uses: slackapi/slack-github-action@v1.26.0
