exclude libtracy from auditwheel repair

--- a/python_package/pyproject.toml
+++ b/python_package/pyproject.toml
@@ -8,4 +8,4 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-repair-wheel-command = "auditwheel repair --exclude libTTMLIRRuntime.so --exclude libTTMLIRCompiler.so --exclude libtt_metal.so --exclude libtt_stl.so --exclude _ttnncpp.so --exclude _ttnn.so --exclude libdevice.so -w {dest_dir} {wheel}"
+repair-wheel-command = "auditwheel repair --exclude libTTMLIRRuntime.so --exclude libTTMLIRCompiler.so --exclude libtt_metal.so --exclude libtt_stl.so --exclude _ttnncpp.so --exclude _ttnn.so --exclude libdevice.so --exclude libtracy.so* -w {dest_dir} {wheel}"
