--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -317,6 +317,30 @@ jobs:
         echo "Estimated duration: $ESTIMATED_DURATION minutes"
         echo "timeout-minutes=$ESTIMATED_DURATION" >> "$GITHUB_OUTPUT"
 
+    - name: Set up tt-triage
+      shell: bash
+      run: |
+        TT_MLIR_VERSION=$(grep 'set(TT_MLIR_VERSION' third_party/CMakeLists.txt | sed 's/.*"\(.*\)".*/\1/')
+        echo "TT_MLIR_VERSION=${TT_MLIR_VERSION}"
+
+        mlir_temp="$(mktemp)"
+        TT_MLIR_TP_URL="https://raw.githubusercontent.com/tenstorrent/tt-mlir/${TT_MLIR_VERSION}/third_party/CMakeLists.txt"
+        echo "Downloading ${TT_MLIR_TP_URL}"
+        curl -fL "${TT_MLIR_TP_URL}" -o "${mlir_temp}"
+        TT_METAL_VERSION=$(grep 'set(TT_METAL_VERSION' third_party/CMakeLists.txt | sed 's/.*"\(.*\)".*/\1/')
+        echo "TT_METAL_VERSION=${TT_METAL_VERSION}"
+
+        mkdir -p tt-triage
+        curl -L "https://github.com/tenstorrent/tt-metal/archive/${TT_METAL_VERSION}.tar.gz" \
+          | tar -xz -C tt-triage --strip-components=1 \
+              tt-metal-${TT_METAL_VERSION}/scripts/ttexalens_ref.txt \
+              tt-metal-${TT_METAL_VERSION}/tools/tt-triage.py \
+              tt-metal-${TT_METAL_VERSION}/tools/triage \
+              tt-metal-${TT_METAL_VERSION}/tt_metal
+
+        echo "TT_METAL_OPERATION_TIMEOUT_SECONDS=${{ vars.TT_METAL_OPERATION_TIMEOUT_SECONDS || 300 }}" >> $GITHUB_ENV
+        echo "TT_METAL_DISPATCH_TIMEOUT_COMMAND_TO_EXECUTE=python $(pwd)/tt-triage/tools/tt-triage.py 1>&2" >> $GITHUB_ENV
+
     - name: Run tests
       timeout-minutes: ${{ fromJson(steps.collect-tests.outputs.timeout-minutes) }}
       env:
